code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_16.wast
(assert_invalid
  (module
    (func $type-second-empty-in-then
      (if (i32.const 0) (then (call 1 (i32.const 0))))
    )
    (func (param i32 i32))
  )
  "type mismatch"
)